<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/one_screen"
            android:id="@+id/button_layout"
            android:textColor="#28afd1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/two_screen"
            android:id="@+id/button_eat"
            android:textColor="#28afd1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/three_screen"
            android:id="@+id/button_animal"
            android:textColor="#28afd1"/>

</LinearLayout>